--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -31,12 +31,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="index.php" class='navbar-brand'>Game On!</a>
+				<a href="index.html" class='navbar-brand'>Game On!</a>
 			</div>
 			<div id='navbar' class='collapse navbar-collapse pull-right'>
 			<ul class='nav navbar-nav'>
-				<li><a href="#">Nieuw</a></li>
-				<li><a href="#">Laden</a></li>
+				<li><a href="#" data-toggle="modal" data-target="#newGame">Nieuw</a></li>
+				<li><a href="#" data-toggle="modal" data-target="#loadGame">Laden</a></li>
 			</ul>
 			</div>
 		</div>
@@ -110,7 +110,41 @@
 				<h2><a href="#" id="next" class="fui-arrow-right"></a></h2>
 			</div>
 		</div>
-	</div>
+		<!-- Modals -->
+		<div class="modal fade" id="newGame" tabindex="-1" role="dialog" aria-labelledby="NewGameLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="NewGameLabel">Nieuw Spel</h4>
+					</div>
+					<div class="modal-body">
+						<h5>Gamers</h5>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
+						<button type="button" class="btn btn-primary">Spel starten</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="loadGame" tabindex="-1" role="dialog" aria-labelledby="LoadGameLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="LoadGameLabel">Spel laden</h4>
+					</div>
+					<div class="modal-body">
+						<h5>Open spelen</h5>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
+						<button type="button" class="btn btn-primary">Laden</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
