--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -111,6 +111,7 @@
 			</div>
 		</div>
 		<!-- Modals -->
+		<!-- New Game -->
 		<div class="modal fade" id="newGame" tabindex="-1" role="dialog" aria-labelledby="NewGameLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -128,6 +129,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- Load Game -->
 		<div class="modal fade" id="loadGame" tabindex="-1" role="dialog" aria-labelledby="LoadGameLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
