--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -114,27 +114,31 @@
 		<div class="modal fade" id="newGame" tabindex="-1" role="dialog" aria-labelledby="NewGameLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
-          <form class="form">
-					  <div class="modal-header">
-						  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						  <h4 class="modal-title" id="NewGameLabel">Nieuw Spel</h4>
-					  </div>
-					  <div class="modal-body">
-						  <div id="newplayers">
-                <div class="form-group">
-                  <label for="numberplayers">Aantal Spelers</label>
-                  <input type="number" class="form-control" name="numberplayers" value=2 min="2" id="numplay" />
-                </div>
-                <hr>
-                <div class="playerinput">
-                </div>
-              </div>
-					  </div>
-					  <div class="modal-footer">
-						  <button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
-						  <button type="button" class="btn btn-primary">Spel starten</button>
-					  </div>
-          </form>
+					<form class="form" action="newgame.html" method="POST">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="NewGameLabel">Nieuw Spel</h4>
+						</div>
+						<div class="modal-body">
+							<div id="newplayers">
+								<div class="form-group">
+									<label for="gamename">Spelnaam</label>
+									<input type="text" class="form-control" name="gamename" required>
+								</div>
+								<div class="form-group">
+									<label for="numberplayers">Aantal Spelers</label>
+									<input type="number" class="form-control" name="numberplayers" value=2 min="2" id="numplay" />
+								</div>
+								<hr>
+								<div class="playerinput">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
+							<button type="submit" class="btn btn-primary">Spel starten</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
